<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:id="@+id/root">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.urban.googlemaps.MapsActivity" />

    <TextView
        android:id="@+id/txtLatitude"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtLatitude" />

    <TextView
        android:id="@+id/txtLongitude"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/txtLongitude"
        android:layout_below="@+id/txtLatitude"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtAccX"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/txtAccX"
        android:layout_below="@+id/txtLongitude"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtAccY"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/txtAccY"
        android:layout_below="@+id/txtAccX"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtAccZ"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/txtAccZ"
        android:layout_below="@+id/txtAccY"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/btnRecord"
        android:onClick="StartRecording" />

    <Button
        android:id="@+id/btnShowData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtLatitude"
        android:layout_toEndOf="@+id/btnRecord"
        android:text="@string/btnData"
        android:onClick="ShowData"/>

</RelativeLayout>